// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormRadioGroup renders correctly with legend 1`] = `
<div class="govuk-form-group">
  <fieldset class="govuk-fieldset"
            id="test-radios"
  >
    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
      Choose a radio
    </legend>
    <div class="govuk-radios">
      <div class="govuk-radios__item"
           data-testid="Radio item for Test radio 1"
      >
        <input class="govuk-radios__input"
               id="test-radios-radio-1"
               name="test-radios"
               type="radio"
               value="1"
        >
        <label class="govuk-label govuk-radios__label"
               for="test-radios-radio-1"
        >
          Test radio 1
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`FormRadioGroup renders correctly with small size variants 1`] = `
<div>
  <div
    class="govuk-form-group"
  >
    <fieldset
      class="govuk-fieldset"
      id="test-radios"
    >
      <legend
        class="govuk-fieldset__legend govuk-fieldset__legend--m"
      >
        Choose a radio
      </legend>
      <div
        class="govuk-radios govuk-radios--small"
      >
        <div
          class="govuk-radios__item"
          data-testid="Radio item for Test radio 1"
        >
          <input
            class="govuk-radios__input"
            id="test-radios-radio-1"
            name="test-radios"
            type="radio"
            value="1"
          />
          <label
            class="govuk-label govuk-radios__label"
            for="test-radios-radio-1"
          >
            Test radio 1
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`FormRadioGroup renders list of radios in correct order 1`] = `
<div class="govuk-form-group">
  <fieldset class="govuk-fieldset"
            id="test-radios"
  >
    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
      Test radios
    </legend>
    <div class="govuk-radios">
      <div class="govuk-radios__item"
           data-testid="Radio item for Test radio 1"
      >
        <input class="govuk-radios__input"
               id="test-radios-radio-1"
               name="test-radios"
               type="radio"
               value="1"
        >
        <label class="govuk-label govuk-radios__label"
               for="test-radios-radio-1"
        >
          Test radio 1
        </label>
      </div>
      <div class="govuk-radios__item"
           data-testid="Radio item for Test radio 2"
      >
        <input class="govuk-radios__input"
               id="test-radios-radio-2"
               name="test-radios"
               type="radio"
               value="2"
        >
        <label class="govuk-label govuk-radios__label"
               for="test-radios-radio-2"
        >
          Test radio 2
        </label>
      </div>
      <div class="govuk-radios__item"
           data-testid="Radio item for Test radio 3"
      >
        <input class="govuk-radios__input"
               id="test-radios-radio-3"
               name="test-radios"
               type="radio"
               value="3"
        >
        <label class="govuk-label govuk-radios__label"
               for="test-radios-radio-3"
        >
          Test radio 3
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`FormRadioGroup renders option with conditional contents 1`] = `
<div class="govuk-form-group">
  <fieldset class="govuk-fieldset"
            id="test-radios"
  >
    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
      Test radios
    </legend>
    <div class="govuk-radios">
      <div class="govuk-radios__item"
           data-testid="Radio item for Test radio 1"
      >
        <input class="govuk-radios__input"
               id="test-radios-radio-1"
               name="test-radios"
               type="radio"
               value="1"
               aria-controls="test-radios-radio-1-conditional"
               aria-expanded="false"
        >
        <label class="govuk-label govuk-radios__label"
               for="test-radios-radio-1"
        >
          Test radio 1
        </label>
      </div>
      <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
           id="test-radios-radio-1-conditional"
      >
        <p>
          Conditional 1
        </p>
      </div>
      <div class="govuk-radios__item"
           data-testid="Radio item for Test radio 2"
      >
        <input class="govuk-radios__input"
               id="test-radios-radio-2"
               name="test-radios"
               type="radio"
               value="2"
               checked
               aria-controls="test-radios-radio-2-conditional"
               aria-expanded="true"
        >
        <label class="govuk-label govuk-radios__label"
               for="test-radios-radio-2"
        >
          Test radio 2
        </label>
      </div>
      <div class="govuk-radios__conditional"
           id="test-radios-radio-2-conditional"
      >
        <p>
          Conditional 2
        </p>
      </div>
      <div class="govuk-radios__item"
           data-testid="Radio item for Test radio 3"
      >
        <input class="govuk-radios__input"
               id="test-radios-radio-3"
               name="test-radios"
               type="radio"
               value="3"
               aria-controls="test-radios-radio-3-conditional"
               aria-expanded="false"
        >
        <label class="govuk-label govuk-radios__label"
               for="test-radios-radio-3"
        >
          Test radio 3
        </label>
      </div>
      <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
           id="test-radios-radio-3-conditional"
      >
        <p>
          Conditional 3
        </p>
      </div>
    </div>
  </fieldset>
</div>
`;
